--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
+        "csv-parser": "^2.3.1",
         "dotenv": "^7.0.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
